add native build profile